[package]
edition = "2024"
name = "bf"
version = "0.4.9-alpha.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "An optimizing Brainfuck interpeter and JIT compiler"
repository = "https://github.com/tov/bf-rs"
documentation = "http://tov.github.io/bf-rs/bf/"
readme = "README.md"
license = "MIT"
keywords = ["brainfuck", "interpreters", "compilers", "jit", "x64"]

[badges]
travis-ci = { repository = "tov/bf-rs" }

[features]

# Enables native x64 JIT; requires nightly Rust
jit = ["dynasmrt", "dynasm"]

# Enables LLVM-based JIT; requires LLVM >= 3.8
llvm = ["llvm-sys"]

# Use `u32` for counts instead of usize.
u32count = []

# Use `u16` for counts instead of usize.
u16count = []

# Enables Cranelift-based JIT
cranelift = ["cranelift-module", "cranelift-jit", "cranelift-frontend", "cranelift-native", "cranelift-codegen"]
cranelift-codegen = ["dep:cranelift-codegen"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }

dynasmrt = { version = "3.0.1", optional = true }
dynasm = { version = "3.0.1", optional = true }

llvm-sys = { version = "130", optional = true }
cranelift-module = { version = "0.130.0", optional = true }
cranelift-jit = { version = "0.130.0", optional = true }
cranelift-frontend = { version = "0.130.0", optional = true }
cranelift-native = { version = "0.130.0", optional = true }
cranelift-codegen = { version = "0.130.0", optional = true }

[package.metadata.docs.rs]
features = ["jit"]

